example/lib/src/arbs/errors/app_ta.arb
{
  "@@locale": "ta",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "தவற் ஏற்பட்டது",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "எதிர்பாராத பிழை ஏற்பட்டது",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "பிழை அறிக்கை வெற்றிகரமாக அனுப்பப்பட்டது.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}